# Source2Py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: Metamod.cmake  Package.cmake  Python.cmake  Source2SDK.cmake
CMake/Resources/: Source2Py.vdf  gameevents.ini  pyplugins.ini
Samples/: SamplePlugin.py
Source2Py/src/: Events.cpp  Events.h  Log.h  PyAPI.cpp  PyAPI.h  PyInclude.h  PyModule.h  PyPlugin.cpp  PyPlugin.h  PyRuntime.cpp  PyRuntime.h  Source2Py.cpp  Source2Py.h  Source2PyPlugin.cpp  Utility.h
